--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ TG_BOT_TOKEN='your_bot_token_here'
 
 # Polymarket
 POLYMARKET_PROXY_ADDRESS='your_polymarket_proxy_address_here'
+PRIVATE_KEY='your_private_key_here'
