feat: add compliant Polymarket copytrader with SELL-by-shares logic

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Telegram
-TG_API_ID='your_api_id_here'
-TG_API_HASH='your_api_hash_here'
-TG_CHANNEL='your_channel_here'
-TG_BOT_TOKEN='your_bot_token_here'
-
 # Polymarket
-POLYMARKET_PROXY_ADDRESS='your_polymarket_proxy_address_here'
-PRIVATE_KEY='your_private_key_here'
+PRIVATE_KEY=0x...
+POLYMARKET_PROXY_ADDRESS=0x...     # funder/proxy
+
+# Telegram
+TG_BOT_TOKEN=123456789:AA... 
+TG_CHANNEL=-1001234567890          # channel id or @handle
+
+# Copytrader tuning
+TRADE_SCALE=0.25                   # mirror 25% of source notional
+POLL_SEC=2.0
+
+# optional
+CURSORS_FILE=last_seen.json
